// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Atoms/Card ] should render Clickable 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm is-clickable"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Card ] should render Colors 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm"
  />
  <div
    class="card color-primary size-sm"
  />
  <div
    class="card color-secondary size-sm"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Card ] should render Default 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Card ] should render Dragabble 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm is-draggable"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Card ] should render Sizes 1`] = `
<DocumentFragment>
  <div
    class="card color-base size-sm"
  />
  <div
    class="card color-base size-md"
  />
  <div
    class="card color-base size-lg"
  />
</DocumentFragment>
`;
